# waterclock

./: .gitignore  README-ja_JP.md  README.md  pyproject.toml  waterclock  waterclock.html  waterclock.py
src/waterclock/: __about__.py  __init__.py  waterclock.py
src/waterclock/data/: memo.md
