[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waterclock"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Toshihiro Kamiya", email = "kamiya@mbj.nifty.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "pygame",
  "pyqt5",
  "appdirs",
]

[tool.hatch.version]
path = "src/waterclock/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
  "data/*.png",
  "data/*.ico",
]

[project.gui-scripts]
waterclock = "waterclock:main"

[project.scripts]
waterclock-cli = "waterclock:main"
